# bob_moondream

./: CMakeLists.txt  README.md  package.xml  requirements.txt
bob_moondream/: moondream_node.py  setup.cfg
launch/: camera.launch.py
scripts/: query.sh
