<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bob_moondream</name>
  <version>0.0.1</version>
  <description>Bob's Moondream2 ROS Node Package to interact with Vision model vikhyatk/moondream2.</description>
  <maintainer email="ros@bob.de">BobRos</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>bob_moondream_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
